# axiom-profiler-2

./: README.md
axiom-profiler-GUI/: Cargo.toml
axiom-profiler-GUI/src/: lib.rs
axiom-profiler-GUI/src/filters/: add_filter.rs  manage_filter.rs  mod.rs
axiom-profiler-GUI/src/infobars/: topbar.rs
axiom-profiler-GUI/src/results/: filters.rs  graph_info.rs  node_info.rs  svg_result.rs
axiom-profiler-GUI/src/results/filters/: filter_chain.rs  graph_filters.rs  node_actions.rs
axiom-profiler-GUI/src/results/graph/: graph_container.rs  svg_graph.rs
axiom-profiler-GUI/src/state/: mod.rs
axiom-profiler-GUI/src/utils/: lookup.rs  toggle_switch.rs  usize_input.rs
smt-log-parser/: Cargo.toml
smt-log-parser/design-docs/: cdcl_graph.md
smt-log-parser/src/: display_with.rs  error.rs  items.rs
smt-log-parser/src/analysis/graph/: raw.rs
smt-log-parser/src/analysis/graph/analysis/: cost.rs  mod.rs  next_enabled.rs
smt-log-parser/src/cmd/: args.rs  dependencies.rs  mod.rs  reconstruct.rs  stats.rs
smt-log-parser/src/formatter/: defns.rs  mod.rs
smt-log-parser/src/items/: equality.rs  idx.rs  instantiation.rs  mod.rs  proof.rs  term.rs
smt-log-parser/src/parsers/: mod.rs
smt-log-parser/src/parsers/z3/: egraph.rs  inst_graph.rs  mod.rs  stack.rs  stm2.rs  terms.rs  z3parser.rs
