[package]
name = "axiom-profiler-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"]}
gloo = "0.9.0"
web-sys = {version="0.3.65", features=["DomTokenList","Element","Node","DomRect","Performance","ResizeObserver","ResizeObserverEntry","HtmlSelectElement"]}
log = "0.4.6"
wasm-logger = "0.2.0"
gloo-file = "0.2.3"
js-sys = "0.3.65"
gloo-net = "0.3.1"
serde = "1.0.180"
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
yew-router = "0.17.0"
scraper = "0.17.1"
getrandom = { version = "0.2", features = ["js"] }
smt-log-parser = { path = "../smt-log-parser", features = ["display_html", "never_panic", "serde"] }
petgraph = "0.6.4"
viz-js = "3.1.0"
wasm-streams = "0.4.0"
yew-hooks = "0.3.0"
fxhash = "0.2.1"
typed-index-collections = "3.1.0"
gloo-console = "0.3.0"
num-format = "0.4.4"
material-yew = { version = "0.3.0", features = ["full"] }
paste = "1.0.14"
yew-agent = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.1.0"
console_error_panic_hook = "0.1.2"
wasm-timer = "0.2"
gloo-timers = { version = "0.3.0", features = ["futures"] }
semver = "1.0"
nucleo-matcher = "0.3.1"

# For random colour generation
gcd = "2.3.0"
palette = "0.7.5"

[build-dependencies]
vergen = { version = "8.2", features = ["git", "gitcl"] }
