[package]
name = "smt-log-parser"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
petgraph = "0.6.4"
wasm-timer = "0.2"
semver = "1.0"
typed-index-collections = "3.1"
fxhash = "0.2"
duplicate = "1.0"
gloo-console = "0.3.0"
roaring = "0.10"
lasso = "0.7"
nonmax = "0.5"
serde = { version = "1.0.183", features = ["derive"], optional = true }
mem_dbg = { version = "0.1.8", features = ["std", "derive"], default-features = false, optional = true }
regex = { version = "1.10", optional = true }
# For the command line interface
clap = { version = "4.5.4", features = ["derive"] }
ammonia = { version = "4.0.0", optional = true }

[dev-dependencies]
memory-stats = "1.1.0"
cap = "0.1.2"
smt-log-parser = { path = ".", features = ["mem_dbg"] }

[features]
default = ["display", "analysis"]
display = ["dep:regex"]
display_html = ["dep:ammonia"]
analysis = []
# Tries to catch memory allocation errors, in some cases spends some extra time with test allocations
# when a crate doesn't support `try_reserve`. Currently some panics may still happen.
never_panic = []
mem_dbg = ["dep:mem_dbg"]
serde = ["dep:serde", "lasso/serialize", "nonmax/serde", "typed-index-collections/serde-std", "petgraph/serde-1"]
